--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,25 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-        <title>React App</title>
+        <meta
+            name="description"
+            content="dictyExpress: An interactive, exploratory data analytics web-app that provides access to gene expression experiments in Dictyostelium by Baylor College of Medicine."
+        />
+        <meta name="author" content="Genialis d.o.o." />
+        <link rel="shortcut icon" href="%PUBLIC_URL%/fav/favicon.ico" />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/fav/favicon60.png" />
+        <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/fav/favicon57.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/fav/favicon60.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/fav/favicon72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/fav/favicon76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/fav/favicon114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/fav/favicon120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/fav/favicon144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/fav/favicon152.png" />
+        <title>LOCAL dictyExpress</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-        <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    </body>
 </html>
