--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/fav/favicon120.png" />
         <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/fav/favicon144.png" />
         <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/fav/favicon152.png" />
-        <title>dictyExpress</title>
+        <title>%REACT_APP_NAME%</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
