Add CSP meta tag and define sentry url

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
             name="description"
             content="dictyExpress: An interactive, exploratory data analytics web-app that provides access to gene expression experiments in Dictyostelium by Baylor College of Medicine."
         />
-        <meta name="author" content="Genialis d.o.o." />
+        <meta name="author" content="Genialis, Inc." />
         <link rel="shortcut icon" href="%PUBLIC_URL%/fav/favicon.ico" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/fav/favicon60.png" />
         <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/fav/favicon57.png" />
