--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,19 @@
         <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/fav/favicon152.png" />
         <script charset="utf-8" src="%PUBLIC_URL%/config.js"></script>
         <title>%REACT_APP_NAME%</title>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-VLE4FY5V5F"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+
+            if ('%NODE_ENV%' === 'production') {
+                gtag('js', new Date());
+
+                gtag('config', 'G-VLE4FY5V5F');
+            }
+        </script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
