--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             name="description"
             content="dictyExpress: An interactive, exploratory data analytics web-app that provides access to gene expression experiments in Dictyostelium by Baylor College of Medicine."
         />
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="script-src 'self' 'unsafe-eval' 'sha256-3ZiTeSQnpJl3eF5uSfi5/x+FmGgb2uUgLJVUNWgWfJs=' https://*.googletagmanager.com; connect-src 'self' *.sentry.io wss://ws.qa.genialis.io https://*.google-analytics.com https://*.analytics.google.com https://*.googletagmanager.com; report-uri https://o74924.ingest.sentry.io/api/5265645/security/?sentry_key=e0a554a693f641a6923a4240a2a64dfb; style-src 'self' 'unsafe-inline'; form-action 'self'; base-uri 'self'; worker-src 'self' blob: ; object-src 'none'; img-src 'self' data: blob:; font-src 'self';"
+        />
         <meta name="author" content="Genialis, Inc." />
         <link rel="shortcut icon" href="/fav/favicon.ico" />
         <link rel="apple-touch-icon" href="/fav/favicon60.png" />
