--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         />
         <meta
             http-equiv="Content-Security-Policy"
-            content="script-src 'self' 'unsafe-eval' 'sha256-3ZiTeSQnpJl3eF5uSfi5/x+FmGgb2uUgLJVUNWgWfJs=' https://*.googletagmanager.com; connect-src 'self' *.sentry.io wss://ws.qa.genialis.io https://*.google-analytics.com https://*.analytics.google.com https://*.googletagmanager.com; style-src 'self' 'unsafe-inline'; form-action 'self'; base-uri 'self'; worker-src 'self' blob: ; object-src 'none'; img-src 'self' data: blob:; font-src 'self' data:;"
+            content="script-src 'self' 'unsafe-eval' 'sha256-3ZiTeSQnpJl3eF5uSfi5/x+FmGgb2uUgLJVUNWgWfJs=' https://*.googletagmanager.com; connect-src 'self' *.sentry.io wss://*.genialis.io wss://*.genialis.com https://*.google-analytics.com https://*.analytics.google.com https://*.googletagmanager.com; style-src 'self' 'unsafe-inline'; form-action 'self'; base-uri 'self'; worker-src 'self' blob: ; object-src 'none'; img-src 'self' data: blob:; font-src 'self' data:;"
         />
         <meta name="author" content="Genialis, Inc." />
         <link rel="shortcut icon" href="/fav/favicon.ico" />
